<resources>
    <string name="app_name">My Toast</string>
    <string name="toast">Toast</string>
    <string name="count">Count</string>
    <string name="_0">0</string>
    <string name="heading">News</string>

    <string name="add_comment">Add comment</string>
    <string name="news_below">The hotel told the court that Ms Luo Yi and her colleagues had dinner and then escorted to their rooms, which face the open lawn area and the lakeside. The visitors then spotted the hippos grazing around the lawn area and excitedly “rushed out of their rooms armed with cameras to take photos of the calf hippo,” the hotel said. “Ms Luo moved too close to the calf hippo and suddenly an adult female hippo, presumably the calf’s mother, charged at and attacked her “ostensibly to protect her calf, and thereby inflicted fatal injuries to the deceased.” But Kenya Wildlife Service said the fatal attack was occasioned by the joint negligence of the deceased and the hotel. The wildlife agency blames Ms Luo for wandering into an area she ought not have, taking photos of the calf and playing with it. The agency also blamed the hotel for failing to erect an electric fence to prevent wild animals from accessing its premises and encroaching on a riparian land where hippopotamus graze.</string>
    <string name="news_head">HOW SHE DIED</string>
    <string name="news_above">Justice Jacqueline Kamau said the evidence presented in court by the hotel that Luo Yi was taking pictures of a hippo when she was attacked was just hearsay since none saw her. The fact that her camera was on standby, if at all, was not proof that she was taking the photo of the hippo and could have taken the photos earlier and left it standby mode, said Justice Kamau. The judge ruled it was quite clear that the hippos had encroached onto the hotel premises and were a major threat to guests. She blamed the hotel for failing to erect a fence to prevent animals encroaching on their property and also for not erecting signage with symbols or Chinese language on the path leading to the guests\' rooms. Had they erected proper signage even without Chinese language, the judge said, the guests may have enquired about their security and asked to be escorted by guards.</string>
    <string name="next_page">Next</string>
    <string name="news_page">news_page</string>
    <string name="send">Send</string>
    <string name="two_activities">Two Activities</string>
    <string name="second_activity">Second Activity</string>
    <string name="reply">Enter Your Reply Here</string>
    <string name="reply_btn">Reply</string>
</resources>
