<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:background="@color/yellow"
        >
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toast"
            android:id="@+id/toast_btn"
            android:textColor="@color/white"
            android:background="@color/purple"
            android:onClick="show_toast"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:id="@+id/num"
            android:layout_centerInParent="true"
            android:textSize="80sp"
            android:textColor="@color/purple"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="next"
            android:layout_above="@id/btn_count"
            android:text="@string/news_page"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/count"
            android:id="@+id/btn_count"
            android:background="@color/purple"
            android:textColor="@color/white"
            android:onClick="show_count"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="activity_two"
            android:layout_above="@id/btn_count"
            android:text="@string/next_page"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

</RelativeLayout>