<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThreeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/purple"
        android:id="@+id/linear_1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_activity"
            android:textSize="25dp"
            android:textColor="@color/white"
            android:textStyle="bold"/>
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_1"
        android:layout_marginTop="20dp"
        android:id="@+id/txt_message"
        android:text="Message"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/reply_btn"
            android:layout_alignParentBottom="true"
            android:onClick="reply"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@+id/type_area"/>
        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:id="@+id/type_area"
            android:hint="@string/reply" />
    </RelativeLayout>
</RelativeLayout>